--- a/_config.yml
+++ b/_config.yml
@@ -496,8 +496,8 @@ rating:
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
   enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  app_id: J1PN5476W4
+  app_key: 508d34e64e33acd2694a3fe89c91eef7
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
