--- a/_config.yml
+++ b/_config.yml
@@ -431,7 +431,7 @@ changyan:
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-#livere_uid: your uid
+livere_uid: MTAyMC80MjcwMi8xOTI0OQ==
 
 # Support for gitalk comments system.
 gitalk:
