--- a/_config.yml
+++ b/_config.yml
@@ -736,5 +736,11 @@ css: assets/css
 js: assets/js
 images: assets/images
 
+
+# Donate 文章末尾显示打赏按钮
+reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
+wechatpay: /images/weixin.jpg
+alipay: /images/zhifub.jpg
+
 # Theme version
 version: 5.1.1
