--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 # ---------------------------------------------------------------
 
 # Site
-title: NexT
-subtitle:
+title: 时光小站
+subtitle: 记录生活点滴，创造美好生活
 description:
 author: John Doe
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
